# FRI

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.reasonix/: settings.json
.reasonix/skills/setup/: SKILL.md
data/raw/: .gitkeep
data/raw/Demo/: CMA_Terrain_12P5km.tif  EC_Terrain_12P5km.tif  FRI_AnyP_demo.py  FRI_AnyP_demo_recall.sh  Module_Interp_dem6.py  Station1  Station_Mountain
docs/: INDEX.md  fri_config.yaml
docs/architecture/: INDEX.md
docs/conventions/: INDEX.md  claude-md-guide.md  code-style.md  karpathy-guidelines.md  must-follow.md  must-not.md
docs/decisions/: ADR-001.md  INDEX.md
references/: .gitkeep
scripts/: compare_results.py  compare_results_ec.py  plot_comparison.py
scripts/harness-win/: auto_backup.ps1  auto_formatter.ps1  auto_stage.ps1  context_monitor.ps1  mcp_health_check.ps1  quality_gate.ps1  release_reminder.ps1  secret_guard.ps1  security_guard.py  trace_logger.ps1
src/: .gitkeep
src/FRI.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/FRInterp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/fri/: __init__.py  auto_config.py  demo.py  interpolate.py  interpolator.py  output.py  validate.py
src/fri_collect.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: .gitkeep
