[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fri-collect"
version = "0.1.0"
description = "Terrain-aware Fine-Resolution Interpolation (FRI) for NWP model output"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Zeng Xiaoqing" },
]
requires-python = ">=3.9"

# Core dependencies — needed for basic interpolation workflow
dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
    "h5py>=3.0",
    "pandas>=1.3",
    "eccodes>=2.30",
    "rasterio>=1.3",
]

keywords = [
    "meteorology", "interpolation", "nwp", "weather",
    "terrain", "fri", "numerical-weather-prediction",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: GIS",
]

# Optional feature groups — install with:  pip install fri-collect[<group>]
[project.optional-dependencies]
dem = [
    "rasterio>=1.3",
]
io = [
    "netCDF4>=1.6",
]
vis = [
    "matplotlib>=3.5",
    "cartopy>=0.21",
    "seaborn>=0.12",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
]
all = [
    "fri-collect[dem,io,vis,dev]",
]

[project.urls]
Homepage = "https://github.com/zengxiaoqing/FRI"
Repository = "https://github.com/zengxiaoqing/FRI"
Documentation = "https://github.com/zengxiaoqing/FRI#readme"
BugTracker = "https://github.com/zengxiaoqing/FRI/issues"

# ── Package discovery ────────────────────────────────────────────

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"fri" = ["py.typed"]

# ── Pytest ───────────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

# ── Ruff (linter + formatter) ───────────────────────────────────

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]  # let formatter handle line length

[tool.ruff.format]
quote-style = "double"

# ── Build outputs ───────────────────────────────────────────────

[tool.check-wheel-contents]
ignore = ["W001"]  # allow top-level package in src/ layout
